--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -6,6 +6,9 @@
   </head>
 
   <body>
-    <h1>Hello World!</h1>
+    <h1>Home page</h1>
+    <a href="https://www.theodinproject.com/about">click me</a>
+
+    <a href="../about.html">About</a>
   </body>
 </html>
